overflow issue solved

--- a/styles/scss/templates/_home.scss
+++ b/styles/scss/templates/_home.scss
@@ -118,6 +118,10 @@
     gap: rem(35px);
     padding-bottom: rem(55px);
     overflow-x: scroll;
+    &::-webkit-scrollbar {
+      display: none;
+    }
+    -ms-overflow-style: none;
     scrollbar-width: none;
     white-space: nowrap;
     @include mq(medium) {
@@ -181,13 +185,19 @@
   }
   &__info-list {
     list-style: none;
-    font-size: rem($h3-md);
+    font-size: rem($h5);
     font-weight: 500;
     margin-top: rem(15px);
+    @include mq(medium) {
+      font-size: rem($h3-md);
+    }
   }
   &__info-button {
-    margin-top: auto;
     padding-bottom: rem(10px);
+    margin-top: rem(35px);
+    @include mq(medium) {
+      margin-top: auto;
+    }
     svg {
       margin: 0 0 -4px 10px;
     }
@@ -377,16 +387,17 @@
     }
   }
   &__card-text-wrapper {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 99;
-    background-color: $primary_background;
-    padding: rem(25px) rem(35px);
-    display: grid;
-    place-items: center;
+    display: none;
     @include mq(medium-large) {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 99;
+      background-color: $primary_background;
+      padding: rem(25px) rem(35px);
+      display: grid;
+      place-items: center;
       width: 280px;
       height: 180px;
     }
@@ -406,11 +417,23 @@
     z-index: 9999;
     display: grid;
     place-items: center;
-    height: rem(50px);
-    width: rem(50px);
+    height: rem(30px);
+    width: rem(30px);
     border-radius: 50%;
     background-color: $primary_background-white;
     cursor: pointer;
+    @include mq(medium-large) {
+      height: rem(50px);
+      width: rem(50px);
+    }
+    svg {
+      height: rem(16px);
+      width: rem(16px);
+      @include mq(medium-large) {
+        height: rem(30px);
+        width: rem(30px);
+      }
+    }
     &--left {
       left: rem(20px);
     }
